--- a/analytic_geometry/Section1.2_Problems.tex
+++ b/analytic_geometry/Section1.2_Problems.tex
@@ -155,52 +155,39 @@
 \newline$\overline{AB}=\sqrt{(4-1)^2+(-2-3)^2}=\sqrt{3^2+(-5)^2}=\sqrt{9+25}=\sqrt{34}$
 \newline$\overline{BC}=\sqrt{(5-4)^2+(2-(-2))^2}=\sqrt{1^2+(2+2)^2}=\sqrt{1+16}=\sqrt{17}$
 \newline$\overline{AC}=\sqrt{(5-1)^2+(2-3)^2}=\sqrt{4^2+(-1)^2}=\sqrt{16+1}=\sqrt{17}$\\
-\newline Since $\sqrt{17} < \sqrt{34}+\sqrt{17}$, $C=(5,2)$ is proven to be on the perpendicular bisector of $\overline{AB}$ Q.E.D.
+\newline Since $\sqrt{17} < \sqrt{34}+\sqrt{17}$, $C=(5,2)$ is proven to be on the perpendicular bisector of $\overline{AB}$. [Q.E.D.]
 \\
 \newline 24. Show that $(-2,4), (2,0), (2,8)$ and $(6,4)$ are the vertices of a square.\\
 \newline 25. Show that $(1,1), (4,1), (3,-2)$ and $(0,-2)$ are the vertices of a parallelogram.\\
 \newline 26. Find all possible values for $y$ so that $(5,8), (-4,11)$ and $(2,y)$ are the vertices of a right triangle.\\
 \newline 27. Determine whether each of the following points is inside, on or outside the circle with center $(-2, 3)$ and radius 5: $(1,7), (-3,8), (2,0), (-5,7), (0,-1), (-5,-1), (-6,6), (4,2)$\\
+\newline \textbf{C}
 \newline 28. Find the center and radius of the circle circumscribed about the triangle with vertices $(5,1)$, $(6,0)$ and $(-1, -7)$\\
-%29. Show that a triangle with vertices $(x1, y1)$, $(x2,y2)$, $(x3, y3)$ has area 
-% \begin{align}
-% \frac{1}{2}
-% \begin{vmatrix}
-%  x_1y_2 +x_2y_3 +x_3y_1 - x_1y_3 -x_2y_1 -x_3y_2
-% \end{vmatrix}
-%  = 
-%  \begin{vmatrix}
-%  \frac{1}{2}
-%  \begin{vmatrix}
-%  x_1 & y_1 & 1\\
-%  x_2 & y_2 & 1\\
-%  x_3 & y_3 & 1
-%  \end{vmatrix}
-%  \end{vmatrix}
-% \end{align}
-% \\   
-% [Hint: Consider the rectangle with sides parallel to the coordinate axes and containing the vertices of the triangle.]\\
-%
-% \usetikzlibrary{shapes.geometric}
-% \usetikzlibrary{arrows.meta,arrows}
-% \begin{tikzpicture}
-%  %initialize
-%  \draw 
-%   (-4,-2) node[below left] {$A$} -- 
-%   (2,-2) node[below] {$B$} -- 
-%   (4,2) node[above right] {$C$}-- 
-%   (-2,2) node[above left] {$D$}-- 
-%   cycle;
-% \filldraw (-4,-2) circle[radius=3pt];
-% \filldraw (2,-2) circle[radius=3pt];
-% \filldraw (4,2) circle[radius=3pt];
-% \filldraw (-2,2) circle[radius=3pt];
-%  %\draw[-latex] (-8,-2) -- (6,-2);
-%  %\draw[-latex] (-2,-4) -- (-2,4);
-%  \draw[arrows ={-Stealth[inset=0pt, length=10pt, angle'=30]}] (-8,-2) -- (6,-2) node[right] {$x$};
-%  \draw[arrows ={-Stealth[inset=0pt, length=10pt, angle'=30]}] (-2,-4) -- (-2,4)node[right] {$y$};
+29. Show that a triangle with vertices $(x1, y1)$, $(x2,y2)$, $(x3, y3)$ has area 
+\begin{align}
+\frac{1}{2}
+\begin{vmatrix}
+ x_1y_2 +x_2y_3 +x_3y_1 - x_1y_3 -x_2y_1 -x_3y_2
+\end{vmatrix}
+ = 
+ \begin{vmatrix}
+ \frac{1}{2}
+ \begin{vmatrix}
+ x_1 & y_1 & 1\\
+ x_2 & y_2 & 1\\
+ x_3 & y_3 & 1
+ \end{vmatrix}
+ \end{vmatrix}
+\end{align}
+[Hint: Consider the rectangle with sides parallel to the coordinate axes and containing the vertices of the triangle.]
 
-% \end{tikzpicture}
+30. Prove analytically that if the diagonals of a parallelogram are equal, then the parallelogram is a rectangle.\\
+[Hint: Place the axes as shown in fig 1.10 and show that $\overflow{AC} = \overflow{BD}$ implies that $A$ is the origin]
+
+31. Prove analytically that the sum of the lengths of two sides of a triangle is greater than the length of the third side.
+
+
+
 
 % \newline $\overline{AB} =\sqrt{()^2+()^2}=\sqrt{()^2+()^2}=\sqrt{}=\sqrt{}=\sqrt{}$
 % \newline $\overline{BC} =\sqrt{()^2+()^2}=\sqrt{()^2+()^2}=\sqrt{}=\sqrt{}=\sqrt{}$
