Update tex source with proper commands and construction.

--- a/analytic_geometry/Section1.3_Problems.tex
+++ b/analytic_geometry/Section1.3_Problems.tex
@@ -7,44 +7,97 @@
 \usepackage{graphicx}
 \usepackage[left=2cm,right=2cm,top=2cm,bottom=2cm]{geometry}
 \begin{document}
+
 \textbf{Section 1.3 - Point-of-Division Formulas}
-\newline \textbf{Problems}
-\newline \textbf{A}
-\newline \textit{In Problems 1-6, find the point $P$ such that $\overline{AP}/\overline{AB} = r$}
-\newline 1. $A=(3,4), B=(7,0) r=1/4$
-\newline 2. $A=(4,-2), B=(-2,-5) r=2/3$
-\newline 3. $A=(5, -1), B=(-4,-5) r=1/5$
-\newline 4. $A=(2,4), B=(-5,2) r=2/5$
-\newline 5. $A=(-4,1), B=(3,8) r=3$
-\newline 6. $A=(-6,2), B=(4,4) r=5/2$\\
-\newline \textit{In Problems 7-10, find the midpoint of the segment $AB$.}
-\newline 7. $A=(5,-2), B=(-1,4)$
-\newline 8. $A=(-3,3), B=(1,5)$
-\newline 9. $A=(4,-1), B=(3,3)$
-\newline 10. $A=(-1,4), B=(0,2)$\\
-\newline \textbf{B}
-\newline 11. $If A=(3,5), P=(6,2) and AP/AB=1/3, find B$
-\newline 12. $If P=(4,7), B=(2,-1) and AP/AB=2/5, find A$
-\newline 13. $If P=(2,-5), B=(4,-3) and AP/AB=1/2, find A$
-\newline 14. $If A=(3,3), P=(5,2) and AP/AB=3/5, find B$\\
-\newline \textit{In Problems 15-18, find the point $P$ between $A$ and $B$ such that $AB$ is divided in the given ratio.}
-\newline 15. $A=(5,-3), B=(-1,6), AP/AB=1/2$
-\newline 16. $A=(-1,-3), B=(-8,11), AP/AB=3/4$
-\newline 17. $A=(2,-1), B=(4,5), AP/AB=2/3$
-\newline 18. $A=(5,8), B=(2,-1), AP/AB=5/1$\\
-\newline \textbf{C}
-\newline 19. If $P=(4,-1)$ is the midpoint of the segment $AB$, where $A=(2,5)$, find $B$.
-\newline 20. Find the center and radius of the circle circumscribed about the right triangle with vertices $(1,1)$, $(1,4)$ and $(7,4)$.
-\newline 21. Find the center and radius of the circle circumscribed about the triangle with vertices $(5,2)$, $(0,4)$ and $(-1, -1)$ (See Problem 26).
-\newline 22. Prove analytically that the diagonals of a parallelogram bisect each other.
-\newline 23. Find the point of intersection of the diagonals of the paralellogram with vertices $(1,1)$, $(4,1)$, $(3,-2)$ and $(0,-2)$.
-\newline 24. Prove analytically that the midpoint of the hypotenuse of a right triangle is equidistant from the three vertices.
-\newline 25. Prove analytically that the vertex and the midpoints of the three sides of an isoceles triangle are the vertices of a rhombus.
-\newline 26. Prove analytically that the meridians of a triangle are concurrent at a point two-thirds of the way from each vertex to the midpoint of the opposite side.
-\newline 27. The point $(1,4)$ is at a distance 5 from the midpoint of the segment joining $(3, -2)$ and $(x,4)$. Find $x$.
-\newline 28. The midpoints of the sides of a triangle are $(-1,3)$, $(1,-2)$, and $(5,-3)$. Find the vertices.
-\newline 29. Three vertices of a parallelogram are $(2,5)$, $(-7,1)$, and $(4,-6)$. Find the fourth vertex. [Hint: There is more than one solution. Sketch all possible parallelograms using the three given vertices.]
-\newline 30. Show that if a triangle has vertices $(x_1,y_1)$, $(x_2,y_2)$ and $(x_3,y_3)$, then the point of intersection of its meridians is 
+\medskip
+
+\textbf{Problems}
+
+\medskip
+\textbf{A}
+\medskip
+
+\textit{In Problems 1-6, find the point $P$ such that $\overline{AP}/\overline{AB} = r$}
+
+1. $A=(3,4), B=(7,0) r=1/4$
+
+\medskip
+\textbf{\underline {Solution}:}
+
+2. $A=(4,-2), B=(-2,-5) r=2/3$
+
+3. $A=(5, -1), B=(-4,-5) r=1/5$
+
+4. $A=(2,4), B=(-5,2) r=2/5$
+
+5. $A=(-4,1), B=(3,8) r=3$
+
+6. $A=(-6,2), B=(4,4) r=5/2$
+
+\medskip
+\textit{In Problems 7-10, find the midpoint of the segment $AB$.}
+\medskip
+
+7. $A=(5,-2), B=(-1,4)$
+
+8. $A=(-3,3), B=(1,5)$
+
+9. $A=(4,-1), B=(3,3)$
+
+10. $A=(-1,4), B=(0,2)$
+
+\medskip
+\textbf{B}
+\medskip
+
+11. $If A=(3,5), P=(6,2) and AP/AB=1/3, find B$
+
+12. $If P=(4,7), B=(2,-1) and AP/AB=2/5, find A$
+
+13. $If P=(2,-5), B=(4,-3) and AP/AB=1/2, find A$
+
+14. $If A=(3,3), P=(5,2) and AP/AB=3/5, find B$
+
+\medskip
+\textit{In Problems 15-18, find the point $P$ between $A$ and $B$ such that $AB$ is divided in the given ratio.}
+\medskip
+
+15. $A=(5,-3), B=(-1,6), AP/AB=1/2$
+
+16. $A=(-1,-3), B=(-8,11), AP/AB=3/4$
+
+17. $A=(2,-1), B=(4,5), AP/AB=2/3$
+
+18. $A=(5,8), B=(2,-1), AP/AB=5/1$
+
+\medskip
+\textbf{C}
+\medskip
+
+19. If $P=(4,-1)$ is the midpoint of the segment $AB$, where $A=(2,5)$, find $B$.
+
+20. Find the center and radius of the circle circumscribed about the right triangle with vertices $(1,1)$, $(1,4)$ and $(7,4)$.
+
+21. Find the center and radius of the circle circumscribed about the triangle with vertices $(5,2)$, $(0,4)$ and $(-1, -1)$ (See Problem 26).
+
+22. Prove analytically that the diagonals of a parallelogram bisect each other.
+
+23. Find the point of intersection of the diagonals of the paralellogram with vertices $(1,1)$, $(4,1)$, $(3,-2)$ and $(0,-2)$.
+
+24. Prove analytically that the midpoint of the hypotenuse of a right triangle is equidistant from the three vertices.
+
+25. Prove analytically that the vertex and the midpoints of the three sides of an isoceles triangle are the vertices of a rhombus.
+
+26. Prove analytically that the meridians of a triangle are concurrent at a point two-thirds of the way from each vertex to the midpoint of the opposite side.
+
+27. The point $(1,4)$ is at a distance 5 from the midpoint of the segment joining $(3, -2)$ and $(x,4)$. Find $x$.
+
+28. The midpoints of the sides of a triangle are $(-1,3)$, $(1,-2)$, and $(5,-3)$. Find the vertices.
+
+29. Three vertices of a parallelogram are $(2,5)$, $(-7,1)$, and $(4,-6)$. Find the fourth vertex. [Hint: There is more than one solution. Sketch all possible parallelograms using the three given vertices.]
+
+30. Show that if a triangle has vertices $(x_1,y_1)$, $(x_2,y_2)$ and $(x_3,y_3)$, then the point of intersection of its meridians is 
 \[ \left(\frac{x_1 + x_2 + x_3}{3}, \frac{y_1 + y_2 + y_3}{3}\right) \]
-\newline 31. Prove analytically that the sum of the squares of the four sides of a parallelogram is equal to the sum of the squares of the two diagonals.
+
+31. Prove analytically that the sum of the squares of the four sides of a parallelogram is equal to the sum of the squares of the two diagonals.
 \end{document}
