--- a/analytic_geometry/Section1.2_Problems.tex
+++ b/analytic_geometry/Section1.2_Problems.tex
@@ -6,193 +6,293 @@
 \usepackage{amssymb}
 \usepackage{graphicx}
 \usepackage[left=2cm,right=2cm,top=2cm,bottom=2cm]{geometry}
-\begin{document}
-\textbf{Section 1.2 - Distance Formula}
-\newline \textbf{Problems}
-\newline \textbf{A}
-\newline \textit{In problems 1-8, find the distance between the given points}
-\\
-\newline 1. $A=(1,-3), B=(2,5)$ $\color{blue} => x_1=1, x_2=2$, $\color{green}y_1=-3, y_2=5 $\\
-\textbf{\underline {Solution}:}\\
-\newline$\overline{AB}=\sqrt{(2-1)^2+(5-(-3))^2}=\sqrt{(1)^2+(5+3)^2}=\sqrt{1^2+8^2}=\sqrt{1+64}=\sqrt{65}$\\
-\newline 2. $A=(4,13), B=(-1,5)$ $\color{blue} => x_1 =4, x_2=-1$, $\color{green}y_1=13, y_2=5 $\\
-\textbf{\underline {Solution}:}\\
-\newline$\overline{AB}=\sqrt{(-1-4)^2+(13-5)^2}=\sqrt{(-5)^2+(8)^2}=\sqrt{25+64}=\sqrt{89}$\\
-\newline 3. $A=(3, -2), B=(3, -4)$ $\color{blue} => x_1 =3, x_2=-2$, $\color{green}y_1=3, y_2=-4 $\\
-\textbf{\underline {Solution}:}\\
-\newline$\overline{AB}=\sqrt{(-2-3)^2 + (-4-3)^2}=\sqrt{(-5)^2+(-7)^2}=\sqrt{25+49}=\sqrt{74}$\\
-\newline 4. $A=(-5, 1), B=(0, -10)$ $\color{blue} => x_1=-5, x_2=0$, $\color{green}y_1=1, y_2=-10 $\\
-\textbf{\underline {Solution}:}\\
-\newline$\overline{AB}=\sqrt{(0-(-5))^2+(-10-1)^2}=\sqrt{(0+5)^2+(-11)^2}=\sqrt{5^2+(-11)^2}=\sqrt{25+121}=\sqrt{146}$\\
-\newline 5. $A=(\frac{1}{2}, \frac{3}{2}), B=(\frac{-5}{2}, 2)$ $\color{blue} => x_1=\frac{1}{2}, x_2=\frac{-5}{2}$, $\color{green}y_1=\frac{3}{2}, y_2=2 $\\
-\textbf{\underline {Solution}:}\\
-\newline$\overline{AB}=\sqrt{(\frac{-5}{2}-\frac{1}{2})^2+(2-\frac{3}{2})^2}=\sqrt{(\frac{-6}{2})^2+(\frac{4}{2}-\frac{3}{2})^2}=\sqrt{(-3)^2+(\frac{1}{2})^2}=\sqrt{9+\frac{1}{4}}=\sqrt{\frac{36}{4}+\frac{1}{4}}=\sqrt{\frac{37}{4}}=\frac{\sqrt{37}}{2}$\\
-\newline 6. $A=(\frac{2}{3}, \frac{1}{3}), B=(\frac{-4}{3}, \frac{4}{3})$ $\color{blue} => x_1=\frac{2}{3}, x_2=\frac{-4}{3}$, $\color{green}y_1=\frac{1}{3}, y_2=\frac{4}{3} $\\
-\textbf{\underline {Solution}:}\\
-\newline$\overline{AB}=\sqrt{(\frac{-4}{3}-\frac{2}{3})^2+(\frac{4}{3}-\frac{1}{3})^2}=\sqrt{(\frac{-6}{3})^2+(\frac{3}{3})^2}=\sqrt{(-2)^2+(1)^2}=\sqrt{4+1}=\sqrt{5}$\\
-\newline 7. $A=(\sqrt{2}, 1), B=(2\sqrt{2}, 3)$ $\color{blue} => x_1=\sqrt{2}, x_2=2$, $\color{green}y_1=1, y_2=\sqrt{2} $\\
-\textbf{\underline {Solution}:}\\
-\newline$\overline{AB}=\sqrt{(2\sqrt{2}-\sqrt{2})^2+(3-1)^2}=\sqrt{(\sqrt{2})^2+(2)^2}=\sqrt{2+4}=\sqrt{6}$\\
-\newline 8. $A=(\sqrt{3}, -\sqrt{2}), B=(-3\sqrt{3}, \sqrt{2})$ $\color{blue} => x_1=\sqrt{3}, x_2=-3\sqrt{3}$, $\color{green}y_1=13, y_2= $\\
-\textbf{\underline {Solution}:}\\
-\newline$\overline{AB}=\sqrt{(-3\sqrt{3}-\sqrt{3})^2+(\sqrt{2}-(-\sqrt{2}))^2}=\sqrt{(-4\sqrt{3})^2+(\sqrt{2}+\sqrt{2})^2}=\sqrt{(-4\sqrt{3})^2+(2\sqrt{2})}=\sqrt{(-4)^2(\sqrt{3})^2+(2)^2(\sqrt{2})^2}=\sqrt{(16)(3)+(4)(2)}=\sqrt{48+8}=\sqrt{56}$\\
-\\
-\newline \textit{In Problems 9-14, determine whether the three given points are collinear}
-\begin{quote}
-[Given 3 points A, B, C, these points are collinear if $\overline{AC}=\overline{AB}+\overline{BC}$ or $\overline{AC}=\overline{BC}-\overline{AB}$]
-\end{quote}
-9. $A=(2, 1), B=(4, 3), C=(-1, -2)$\\
-\textbf{\underline {Solution}:}\\
-\newline $\overline{AB} =\sqrt{(4-2)^2+(3-1)^2}=\sqrt{(2)^2+(2)^2}=\sqrt{4+4}=\sqrt{8}=2\sqrt{2}$
-\newline $\overline{BC} =\sqrt{(-1-4)^2+(-2-3)^2}=\sqrt{(-5)^2+(-5)^2}=\sqrt{25+25}=\sqrt{50}=\sqrt{25}\sqrt{2}=5\sqrt{2}$
-\newline $\overline{AC} =\sqrt{(-1-2))^2+(-2-1)^2}=\sqrt{(-3)^2+(-3)^2}=\sqrt{9+9}=\sqrt{18}=\sqrt{9}\sqrt{2}=3\sqrt{2}$
-\\
-\newline 10. $A=(3, 2), B=(4, 6), C=(0, -8)$\\
-\textbf{\underline {Solution}:}\\
-\newline $\overline{AB} =\sqrt{(4-3)^2+(6-2)^2}=\sqrt{(1)^2+(4)^2}=\sqrt{1+16}=\sqrt{17}$
-\newline $\overline{BC} =\sqrt{(0-4)^2+(-8-6)^2}=\sqrt{(-4)^2+(-14)^2}=\sqrt{16+196}=\sqrt{212}=\sqrt{4}\sqrt{53}=2\sqrt{53}$
-\newline $\overline{AC} =\sqrt{(0-3)^2+(-8-2)^2}=\sqrt{(-3)^2+(-10)^2}=\sqrt{9+100}=\sqrt{109}$
-\\
-\newline 11. A=$(-2, 3), B=(7, -2), C=(2, 5)$\\
-\textbf{\underline {Solution}:}\\
-\newline $\overline{AB} =\sqrt{(7-(-2))^2+(-2-3)^2}=\sqrt{(7+2)^2+(-5)^2}=\sqrt{9^2+25}=\sqrt{81+25}=\sqrt{106}=\sqrt{4}\sqrt{26}=2\sqrt{26}$
-\newline $\overline{BC} =\sqrt{(2-7)^2+(5-(-2))^2}=\sqrt{(-5)^2+(5+2)^2}=\sqrt{25+7^2}=\sqrt{25+49}=\sqrt{74}$
-\newline $\overline{AC} =\sqrt{(2-(-2))^2+(5-3)^2}=\sqrt{(2+2)^2+(2)^2}=\sqrt{4^2+4}=\sqrt{16+4}=\sqrt{20}=\sqrt{4}\sqrt{5}=2\sqrt{5}$
-\\
-\newline 12. A=$(2, -1), B=(-1, 4), C=(5, -6)$\\
-\textbf{\underline {Solution}:}\\
-\newline $\overline{AB} =\sqrt{(-1-2)^2+(4-(-1))^2}=\sqrt{(-3)^2+(4+1)^2}=\sqrt{9+(5)^2}=\sqrt{9+25}=\sqrt{34}$
-\newline $\overline{BC} =\sqrt{(5-(-1))^2+(-6-4)^2}=\sqrt{(5+1)^2+(-10)^2}=\sqrt{(6)^2+100}==\sqrt{36+100}=\sqrt{136}=4\sqrt{34}$
-\newline $\overline{AC} =\sqrt{(5-2)^2+(-6-(-1))^2}=\sqrt{(3)^2+(-6+1)^2}=\sqrt{9+(-5)^2}=\sqrt{9+25}=\sqrt{34}$
-\\
-\newline 13. A=$(1, -1), B=(3, 3), C=(0, -3)$\\
-\textbf{\underline {Solution}:}\\
-\newline $\overline{AB} =\sqrt{(3-1)^2+(3-(-1))^2}=\sqrt{(2)^2+(3+1)^2}=\sqrt{(2)^2+(4)^2}=\sqrt{4+16}=\sqrt{20}=\sqrt{4}\sqrt{5}=2\sqrt{5}$
-\newline $\overline{BC} =\sqrt{(0-3)^2+(-3-3)^2}=\sqrt{(-3)^2+(-6)^2}=\sqrt{9+36}=\sqrt{45}=\sqrt{9}\sqrt{5}=3\sqrt{5}$
-\newline $\overline{AC} =\sqrt{(0-1)^2+(-3-(-1))^2}=\sqrt{(-1)^2+(-3+1)^2}=\sqrt{1+(-2)^2}=\sqrt{1+4}=\sqrt{5}$
-\\
-\newline 14. A=$(1, \sqrt{2}), B=(4, 3\sqrt{2}), C=(10, 6\sqrt{2})$\\
-\textbf{\underline {Solution}:}\\
-\newline $\overline{AB} =\sqrt{(4-1)^2+(3\sqrt{2}-\sqrt{2})^2}=\sqrt{(3)^2+(2\sqrt{2})^2}=\sqrt{9+(2)^2)(\sqrt{2})^2}=\sqrt{9+(4)(2)}=\sqrt{9+8}=\sqrt{17}$
-\newline $\overline{BC} =\sqrt{(10-4)^2+(6\sqrt{2}-3\sqrt{2})^2}=\sqrt{(6)^2+(3\sqrt{2})^2}=\sqrt{36+(3)^2(\sqrt{2})^2}=\sqrt{36+(9)(2)}=\sqrt{36+18}=\sqrt{54}$
-\newline $\overline{AC} =\sqrt{(10-1)^2+(6\sqrt{2}-3\sqrt{2})^2}=\sqrt{(9)^2+(3\sqrt{2})^2}=\sqrt{81+(3)^2(\sqrt{2})^2}=\sqrt{81+(9)(2)}=\sqrt{81+18}=\sqrt{99}=\sqrt{9}\sqrt{11}=3\sqrt{11}$
-\\
-\newline \textit{In Problems 15-18, determine whether the three given points are the vertices of a right triangle}
-\begin{quote}
-[Given 3 points A, B, C, these points create a triangle if $\overline{AC} < \overline{AB}+\overline{BC}$]
-\end{quote}
-15. $A=(0, 2), B=(-2, 4), C=(1, 3)$\\
-\textbf{\underline {Solution}:}\\
-\newline $\overline{AB} =\sqrt{(-2-0)^2+(4-2)^2}=\sqrt{(-2)^2+(2)^2}=\sqrt{4+4}=\sqrt{8}=\sqrt{4}\sqrt{2}=2\sqrt{2}$
-\newline $\overline{BC} =\sqrt{(1-(-2))^2+(3-4)^2}=\sqrt{(1+2)^2+(-1)^2}=\sqrt{(3)^2+1}=\sqrt{9+1}=\sqrt{10}$
-\newline $\overline{AC} =\sqrt{(1-0)^2+(3-2)^2}=\sqrt{(1)^2+(1)^2}=\sqrt{1+1}=\sqrt{2}$
-\newline Answer: \color{green}{Right Triangle}\color{black}\\
-\newline 16. $A=(-1, 3), B=(4, 6), C=(-3, 1)$\\
-\textbf{\underline {Solution}:}\\
-\newline $\overline{AB} =\sqrt{(4-(-1))^2+(6-3)^2}=\sqrt{(4+1)^2+(3)^2}=\sqrt{(5)^2+9}=\sqrt{25+9}=\sqrt{34}$
-\newline $\overline{BC} =\sqrt{(-3-4)^2+(1-6)^2}=\sqrt{(-7)^2+(-5)^2}=\sqrt{49+25}=\sqrt{74}$
-\newline $\overline{AC} =\sqrt{(1-0)^2+(3-2)^2}=\sqrt{(1)^2+(1)^2}=\sqrt{1+1}=\sqrt{2}$\\
-\newline 17. $A=(9, 6), B=(-5, 4), C=(7, 10)$\\
-\textbf{\underline {Solution}:}\\
-\newline $\overline{AB} =\sqrt{(-5-9)^2+(4-6)^2}=\sqrt{(-14)^2+(-2)^2}=\sqrt{196+4}=\sqrt{200}=\sqrt{10}\sqrt{2}$
-\newline $\overline{BC} =\sqrt{(7-(-5))^2+(10-4)^2}=\sqrt{(7+12)^2+(6)^2}=\sqrt{19^2+36}=\sqrt{361+36}=\sqrt{397}$
-\newline $\overline{AC} =\sqrt{(7-9)^2+(10-6)^2}=\sqrt{(2)^2+(4)^2}=\sqrt{4+16}=\sqrt{20}=\sqrt{4}\sqrt{5}=2\sqrt{5}$\\
-\newline Answer: \color{green}{Right Triangle}\color{black}\\
-\newline 18. $A=(9, -2), B=(8, 0), C=(-6, -7)$\\
-\textbf{\underline {Solution}:}\\
-\newline $\overline{AB} =\sqrt{(8-9)^2+(0-(-2))^2}=\sqrt{(-1)^2+(0+2)^2}=\sqrt{1+(2)^2}=\sqrt{1+4}=\sqrt{5}$
-\newline $\overline{BC} =\sqrt{(-6-8)^2+(-7-0)^2}=\sqrt{(-14)^2+(-7)^2}=\sqrt{196+49}=\sqrt{245}=\sqrt{49}\sqrt{5}=7\sqrt{5}$
-\newline $\overline{AC} =\sqrt{(-6-9)^2+(-7-(-2))^2}=\sqrt{(-15)^2+(-7+2)^2}=\sqrt{225+(-5)^2}=\sqrt{225+25}=\sqrt{250}\\=\sqrt{25}\sqrt{10}=5\sqrt{10}=5\sqrt{2}\sqrt{5}$
-\\
+\definecolor{amethyst}{rgb}{0.6, 0.4, 0.8}
 
-19. $P_{1} = (1, 5), P_{2} = (x, 2), \overline{P_1P_2} = 5$\\
-\textbf{\underline {Solution}:}\\
-\newline$5=\sqrt{(x-1)^2+(2-5)^2}=\sqrt{(x-1)(x-1)+(-3)^2}=\sqrt{x^2-2x+1+9}=\sqrt{x^2-2x+10}$
-\newline$25=x^2-2x+10$
-\newline$0=x^2-2x+10-25$
-\newline$0=x^2-2x-15$
-\newline$0=(x+3)(x-15)$
-\newline$0=(x+3)$ or $0=(x-15)$
-\newline$-3=x$ or $15=x$\\
-\newline 20. $P_{1} = (-3, y), P_{2} = (9, 2), \overline{P_1P_2 }= 13$\\
-\textbf{\underline {Solution}:}\\
-\newline$13=\sqrt{(9-(-3))^2+(2-y)^2} = \sqrt{(9+3)^2+(2-y)(2-y)}$
-\newline$13^2=(\sqrt{(9-(-3))^2+(2-y)^2})^2) = (\sqrt{(12)^2+(2-y)(2-y)})^2$
-\newline$169=144+4-2y-2y+y^2$
-\newline$169=144+4-4y+y^2=y^2-4y+148$
-\newline$169-169=144+4-4y+y^2=y^2-4y+148-169$
-\newline$0=144+4-4y+y^2=y^2-4y-21$
-\newline$0=(x+3)(x-7)$
-\newline$\therefore x=-3$, or $x=7$\\
-\newline 21. $P_{1} = (x, x), P_{2} = (1, 4), \overline{P_1P_2} = \sqrt{5}$\\
-\textbf{\underline {Solution}:}\\
-\newline$\sqrt{(1-x)^2+(4-x)^2}=\sqrt{5} \implies (\sqrt{(1-x)^2+(4-x)^2})^2=(\sqrt{5})^2 \implies \sqrt{(1-x)^2+(4-x)^2}=5$
-\newline$\therefore\,(1-x)(1-x)+(4-x)(4-x)=5$
-\newline$1-x-x+x^2+16-4x-4x+x^2=5$
-\newline$1-2x+x^2+16-8x+x^2=5$
-\newline$1-2x+2x^2+16-8x=5$
-\newline$2x^2-10x+17=5$
-\newline$2x^2-10x+17-5=5-5$
-\newline$2x^2-10x+12=0$
-\newline$\frac{1}{2}[2x^2-10x+12=0]$
-\newline$x^2-5x+6=0$
-\newline$(x-2)(x-3))=0$
-\newline$\therefore\,x=2$ or $x=3$\\
-\newline 22. $P_{1} = (x, 2x), P_{2} = (2x, 1), \overline{P_1P_2} = \sqrt{2}$\\
-\textbf{\underline {Solution}:}\\
-\newline$\sqrt{2}=\sqrt{(2x-x)^2+(1-2x)^2}$
-\newline$(\sqrt{2})^2=(\sqrt{(2x-x)^2+(1-2x)^2})^2$
-\newline$2=(2x-x)^2+(1-2x)^2$
-\newline$2=(2x-x)(2x-x)+(1-2x)(1-2x)$
-\newline$2=4x^2-2x^2-2x^2+x^2+1-2x-2x+4x^2$
-\newline$2=4x^2-4x^2+x^2+1-4x+4x^2 \implies\, 2=5x^2-4x+1 \implies\, 2-2=5x^2-4x+1-2$
-\newline$\implies\, 0=5x^2-4x-1 \implies\, 0=(5x+1)(x-1) \implies\, x=-\frac{1}{5}$ or $x=1$\\
-\newline 23. Show that $(5,2)$ is on the perpendicular bisector of the segment $\overline{AB}$ where $A = (1,3)$ and $B=(4, -2)$\\
-\textbf{\underline {Solution}:}\\
-\newline A bisector divides in half and a perpendicular line has slope 0, therefore a perpendicular bisector is a line of slope 0 that halves the segment $\overline{AB}$.\\
-\newline In this instance the point on the perpendicular bisector will participate in creating a triangular relationship between all three points.\\
-\newline Therefore if we set $C=(5,2)$. Then the three points make a triangle if $\overline{AC} <\overline{AB}+\overline{BC}$\\
-\newline$\overline{AB}=\sqrt{(4-1)^2+(-2-3)^2}=\sqrt{3^2+(-5)^2}=\sqrt{9+25}=\sqrt{34}$
-\newline$\overline{BC}=\sqrt{(5-4)^2+(2-(-2))^2}=\sqrt{1^2+(2+2)^2}=\sqrt{1+16}=\sqrt{17}$
-\newline$\overline{AC}=\sqrt{(5-1)^2+(2-3)^2}=\sqrt{4^2+(-1)^2}=\sqrt{16+1}=\sqrt{17}$\\
-\newline Since $\sqrt{17} < \sqrt{34}+\sqrt{17}$, $C=(5,2)$ is proven to be on the perpendicular bisector of $\overline{AB}$. [Q.E.D.]
-\\
-\newline 24. Show that $(-2,4), (2,0), (2,8)$ and $(6,4)$ are the vertices of a square.\\
-\newline 25. Show that $(1,1), (4,1), (3,-2)$ and $(0,-2)$ are the vertices of a parallelogram.\\
-\newline 26. Find all possible values for $y$ so that $(5,8), (-4,11)$ and $(2,y)$ are the vertices of a right triangle.\\
-\newline 27. Determine whether each of the following points is inside, on or outside the circle with center $(-2, 3)$ and radius 5: $(1,7), (-3,8), (2,0), (-5,7), (0,-1), (-5,-1), (-6,6), (4,2)$\\
-\newline \textbf{C}
-\newline 28. Find the center and radius of the circle circumscribed about the triangle with vertices $(5,1)$, $(6,0)$ and $(-1, -7)$\\
+\begin{document}
+
+\textbf{Section 1.2 - Distance Formula}
+
+\textbf{Problems}
+
+\textbf{A}
+
+\textit{In problems 1-8, find the distance between the given points}
+
+1. $A=(1,-3), B=(2,5)$ $\color{blue} => x_1=1, x_2=2$, $\color{green}y_1=-3, y_2=5 $
+
+\textbf{\underline {Solution}:}
+
+$\overline{AB}=\sqrt{(2-1)^2+(5-(-3))^2}=\sqrt{(1)^2+(5+3)^2}=\sqrt{1^2+8^2}=\sqrt{1+64}=\sqrt{65}$
+
+2. $A=(4,13), B=(-1,5)$ $\color{blue} => x_1 =4, x_2=-1$, $\color{green}y_1=13, y_2=5 $
+
+\textbf{\underline {Solution}:}
+
+$\overline{AB}=\sqrt{(-1-4)^2+(13-5)^2}=\sqrt{(-5)^2+(8)^2}=\sqrt{25+64}=\sqrt{89}$
+
+3. $A=(3, -2), B=(3, -4)$ $\color{blue} => x_1 =3, x_2=-2$, $\color{green}y_1=3, y_2=-4 $
+
+\textbf{\underline {Solution}:}
+
+$\overline{AB}=\sqrt{(-2-3)^2 + (-4-3)^2}=\sqrt{(-5)^2+(-7)^2}=\sqrt{25+49}=\sqrt{74}$
+
+4. $A=(-5, 1), B=(0, -10)$ $\color{blue} => x_1=-5, x_2=0$, $\color{green}y_1=1, y_2=-10 $
+
+\textbf{\underline {Solution}:}
+
+$\overline{AB}=\sqrt{(0-(-5))^2+(-10-1)^2}=\sqrt{(0+5)^2+(-11)^2}=\sqrt{5^2+(-11)^2}=\sqrt{25+121}=\sqrt{146}$
+
+5. $A=(\frac{1}{2}, \frac{3}{2}), B=(\frac{-5}{2}, 2)$ $\color{blue} => x_1=\frac{1}{2}, x_2=\frac{-5}{2}$, $\color{green}y_1=\frac{3}{2}, y_2=2 $
+
+\textbf{\underline {Solution}:}
+
+$\overline{AB}=\sqrt{(\frac{-5}{2}-\frac{1}{2})^2+(2-\frac{3}{2})^2}=\sqrt{(\frac{-6}{2})^2+(\frac{4}{2}-\frac{3}{2})^2}=\sqrt{(-3)^2+(\frac{1}{2})^2}=\sqrt{9+\frac{1}{4}}=\sqrt{\frac{36}{4}+\frac{1}{4}}=\sqrt{\frac{37}{4}}=\frac{\sqrt{37}}{2}$
+
+6. $A=(\frac{2}{3}, \frac{1}{3}), B=(\frac{-4}{3}, \frac{4}{3})$ $\color{blue} => x_1=\frac{2}{3}, x_2=\frac{-4}{3}$, $\color{green}y_1=\frac{1}{3}, y_2=\frac{4}{3} $
+
+\textbf{\underline {Solution}:}
+
+$\overline{AB}=\sqrt{(\frac{-4}{3}-\frac{2}{3})^2+(\frac{4}{3}-\frac{1}{3})^2}=\sqrt{(\frac{-6}{3})^2+(\frac{3}{3})^2}=\sqrt{(-2)^2+(1)^2}=\sqrt{4+1}=\sqrt{5}$
+
+7. $A=(\sqrt{2}, 1), B=(2\sqrt{2}, 3)$ $\color{blue} => x_1=\sqrt{2}, x_2=2$, $\color{green}y_1=1, y_2=\sqrt{2} $
+
+\textbf{\underline {Solution}:}
+
+$\overline{AB}=\sqrt{(2\sqrt{2}-\sqrt{2})^2+(3-1)^2}=\sqrt{(\sqrt{2})^2+(2)^2}=\sqrt{2+4}=\sqrt{6}$
+
+8. $A=(\sqrt{3}, -\sqrt{2}), B=(-3\sqrt{3}, \sqrt{2})$ $\color{blue} => x_1=\sqrt{3}, x_2=-3\sqrt{3}$, $\color{green}y_1=13, y_2= $
+
+\textbf{\underline {Solution}:}
+
+$\overline{AB}=\sqrt{(-3\sqrt{3}-\sqrt{3})^2+(\sqrt{2}-(-\sqrt{2}))^2}=\sqrt{(-4\sqrt{3})^2+(\sqrt{2}+\sqrt{2})^2}$
+
+$=\sqrt{(-4\sqrt{3})^2+(2\sqrt{2})}=\sqrt{(-4)^2(\sqrt{3})^2+(2)^2(\sqrt{2})^2}=\sqrt{(16)(3)+(4)(2)}=\sqrt{48+8}=\sqrt{56}$
+
+\textit{In Problems 9-14, determine whether the three given points are collinear}
+
+\begin{quote}
+{}[Given 3 points A, B, C, these points are collinear if $\overline{AC}=\overline{AB}+\overline{BC}$ or $\overline{AC}=\overline{BC}-\overline{AB}$]
+\end{quote}
+
+9. $A=(2, 1), B=(4, 3), C=(-1, -2)$
+
+\textbf{\underline {Solution}:}
+
+$\overline{AB} =\sqrt{(4-2)^2+(3-1)^2}=\sqrt{(2)^2+(2)^2}=\sqrt{4+4}=\sqrt{8}=2\sqrt{2}$
+
+$\overline{BC} =\sqrt{(-1-4)^2+(-2-3)^2}=\sqrt{(-5)^2+(-5)^2}=\sqrt{25+25}=\sqrt{50}=\sqrt{25}\sqrt{2}=5\sqrt{2}$
+
+$\overline{AC} =\sqrt{(-1-2))^2+(-2-1)^2}=\sqrt{(-3)^2+(-3)^2}=\sqrt{9+9}=\sqrt{18}=\sqrt{9}\sqrt{2}=3\sqrt{2}$
+
+10. $A=(3, 2), B=(4, 6), C=(0, -8)$
+
+\textbf{\underline {Solution}:}
+
+$\overline{AB} =\sqrt{(4-3)^2+(6-2)^2}=\sqrt{(1)^2+(4)^2}=\sqrt{1+16}=\sqrt{17}$
+
+$\overline{BC} =\sqrt{(0-4)^2+(-8-6)^2}=\sqrt{(-4)^2+(-14)^2}=\sqrt{16+196}=\sqrt{212}=\sqrt{4}\sqrt{53}=2\sqrt{53}$
+
+$\overline{AC} =\sqrt{(0-3)^2+(-8-2)^2}=\sqrt{(-3)^2+(-10)^2}=\sqrt{9+100}=\sqrt{109}$
+
+
+11. A=$(-2, 3), B=(7, -2), C=(2, 5)$
+
+\textbf{\underline {Solution}:}
+
+$\overline{AB} =\sqrt{(7-(-2))^2+(-2-3)^2}=\sqrt{(7+2)^2+(-5)^2}=\sqrt{9^2+25}=\sqrt{81+25}=\sqrt{106}=\sqrt{4}\sqrt{26}=2\sqrt{26}$
+
+$\overline{BC} =\sqrt{(2-7)^2+(5-(-2))^2}=\sqrt{(-5)^2+(5+2)^2}=\sqrt{25+7^2}=\sqrt{25+49}=\sqrt{74}$
+
+$\overline{AC} =\sqrt{(2-(-2))^2+(5-3)^2}=\sqrt{(2+2)^2+(2)^2}=\sqrt{4^2+4}=\sqrt{16+4}=\sqrt{20}=\sqrt{4}\sqrt{5}=2\sqrt{5}$
+
+
+12. A=$(2, -1), B=(-1, 4), C=(5, -6)$
+
+\textbf{\underline {Solution}:}
+
+$\overline{AB} =\sqrt{(-1-2)^2+(4-(-1))^2}=\sqrt{(-3)^2+(4+1)^2}=\sqrt{9+(5)^2}=\sqrt{9+25}=\sqrt{34}$
+
+$\overline{BC} =\sqrt{(5-(-1))^2+(-6-4)^2}=\sqrt{(5+1)^2+(-10)^2}=\sqrt{(6)^2+100}==\sqrt{36+100}=\sqrt{136}=4\sqrt{34}$
+
+$\overline{AC} =\sqrt{(5-2)^2+(-6-(-1))^2}=\sqrt{(3)^2+(-6+1)^2}=\sqrt{9+(-5)^2}=\sqrt{9+25}=\sqrt{34}$
+
+
+13. A=$(1, -1), B=(3, 3), C=(0, -3)$
+
+\textbf{\underline {Solution}:}
+
+$\overline{AB} =\sqrt{(3-1)^2+(3-(-1))^2}=\sqrt{(2)^2+(3+1)^2}=\sqrt{(2)^2+(4)^2}=\sqrt{4+16}=\sqrt{20}=\sqrt{4}\sqrt{5}=2\sqrt{5}$
+
+$\overline{BC} =\sqrt{(0-3)^2+(-3-3)^2}=\sqrt{(-3)^2+(-6)^2}=\sqrt{9+36}=\sqrt{45}=\sqrt{9}\sqrt{5}=3\sqrt{5}$
+
+$\overline{AC} =\sqrt{(0-1)^2+(-3-(-1))^2}=\sqrt{(-1)^2+(-3+1)^2}=\sqrt{1+(-2)^2}=\sqrt{1+4}=\sqrt{5}$
+
+
+14. A=$(1, \sqrt{2}), B=(4, 3\sqrt{2}), C=(10, 6\sqrt{2})$
+
+\textbf{\underline {Solution}:}
+
+$\overline{AB} =\sqrt{(4-1)^2+(3\sqrt{2}-\sqrt{2})^2}=\sqrt{(3)^2+(2\sqrt{2})^2}=\sqrt{9+(2)^2)(\sqrt{2})^2}=\sqrt{9+(4)(2)}=\sqrt{9+8}=\sqrt{17}$
+
+$\overline{BC} =\sqrt{(10-4)^2+(6\sqrt{2}-3\sqrt{2})^2}=\sqrt{(6)^2+(3\sqrt{2})^2}=\sqrt{36+(3)^2(\sqrt{2})^2}=\sqrt{36+(9)(2)}=\sqrt{36+18}=\sqrt{54}$
+
+$\overline{AC} =\sqrt{(10-1)^2+(6\sqrt{2}-3\sqrt{2})^2}=\sqrt{(9)^2+(3\sqrt{2})^2}=\sqrt{81+(3)^2(\sqrt{2})^2}=\sqrt{81+(9)(2)}=\sqrt{81+18}=\sqrt{99}=\sqrt{9}\sqrt{11}=3\sqrt{11}$
+
+
+\textit{In Problems 15-18, determine whether the three given points are the vertices of a right triangle}
+\begin{quote}
+{}[Given 3 points A, B, C, these points create a triangle if $\overline{AC} < \overline{AB}+\overline{BC}$]
+\end{quote}
+
+15. $A=(0, 2), B=(-2, 4), C=(1, 3)$
+\textbf{\underline {Solution}:}
+
+$\overline{AB} =\sqrt{(-2-0)^2+(4-2)^2}=\sqrt{(-2)^2+(2)^2}=\sqrt{4+4}=\sqrt{8}=\sqrt{4}\sqrt{2}=2\sqrt{2}$
+
+$\overline{BC} =\sqrt{(1-(-2))^2+(3-4)^2}=\sqrt{(1+2)^2+(-1)^2}=\sqrt{(3)^2+1}=\sqrt{9+1}=\sqrt{10}$
+
+$\overline{AC} =\sqrt{(1-0)^2+(3-2)^2}=\sqrt{(1)^2+(1)^2}=\sqrt{1+1}=\sqrt{2}$
+
+\color{amethyst}Answer: \color{green}{Right Triangle}\color{black}
+
+16. $A=(-1, 3), B=(4, 6), C=(-3, 1)$
+
+\textbf{\underline {Solution}:}
+
+$\overline{AB} =\sqrt{(4-(-1))^2+(6-3)^2}=\sqrt{(4+1)^2+(3)^2}=\sqrt{(5)^2+9}=\sqrt{25+9}=\sqrt{34}$
+
+$\overline{BC} =\sqrt{(-3-4)^2+(1-6)^2}=\sqrt{(-7)^2+(-5)^2}=\sqrt{49+25}=\sqrt{74}$
+
+$\overline{AC} =\sqrt{(1-0)^2+(3-2)^2}=\sqrt{(1)^2+(1)^2}=\sqrt{1+1}=\sqrt{2}$
+
+17. $A=(9, 6), B=(-5, 4), C=(7, 10)$
+
+\textbf{\underline {Solution}:}
+
+$\overline{AB} =\sqrt{(-5-9)^2+(4-6)^2}=\sqrt{(-14)^2+(-2)^2}=\sqrt{196+4}=\sqrt{200}=\sqrt{10}\sqrt{2}$
+
+$\overline{BC} =\sqrt{(7-(-5))^2+(10-4)^2}=\sqrt{(7+12)^2+(6)^2}=\sqrt{19^2+36}=\sqrt{361+36}=\sqrt{397}$
+
+$\overline{AC} =\sqrt{(7-9)^2+(10-6)^2}=\sqrt{(2)^2+(4)^2}=\sqrt{4+16}=\sqrt{20}=\sqrt{4}\sqrt{5}=2\sqrt{5}$
+
+\color{amethyst}Answer: \color{green}{Right Triangle}\color{black}
+
+18. $A=(9, -2), B=(8, 0), C=(-6, -7)$
+
+\textbf{\underline {Solution}:}
+
+$\overline{AB} =\sqrt{(8-9)^2+(0-(-2))^2}=\sqrt{(-1)^2+(0+2)^2}=\sqrt{1+(2)^2}=\sqrt{1+4}=\sqrt{5}$
+
+$\overline{BC} =\sqrt{(-6-8)^2+(-7-0)^2}=\sqrt{(-14)^2+(-7)^2}=\sqrt{196+49}=\sqrt{245}=\sqrt{49}\sqrt{5}=7\sqrt{5}$
+
+$\overline{AC} =\sqrt{(-6-9)^2+(-7-(-2))^2}=\sqrt{(-15)^2+(-7+2)^2}=\sqrt{225+(-5)^2}=$
+
+$\sqrt{225+25}=\sqrt{250}=\sqrt{25}\sqrt{10}=5\sqrt{10}=5\sqrt{2}\sqrt{5}$
+
+19. $P_{1} = (1, 5), P_{2} = (x, 2), \overline{P_1P_2} = 5$
+
+\textbf{\underline {Solution}:}
+$5=\sqrt{(x-1)^2+(2-5)^2}=\sqrt{(x-1)(x-1)+(-3)^2}=\sqrt{x^2-2x+1+9}=\sqrt{x^2-2x+10}$
+$25=x^2-2x+10$
+$0=x^2-2x+10-25$
+$0=x^2-2x-15$
+$0=(x+3)(x-15)$
+$0=(x+3)$ or $0=(x-15)$
+$-3=x$ or $15=x$
+
+20. $P_{1} = (-3, y), P_{2} = (9, 2), \overline{P_1P_2 }= 13$
+
+\textbf{\underline {Solution}:}
+$13=\sqrt{(9-(-3))^2+(2-y)^2} = \sqrt{(9+3)^2+(2-y)(2-y)}$
+$13^2=(\sqrt{(9-(-3))^2+(2-y)^2})^2) = (\sqrt{(12)^2+(2-y)(2-y)})^2$
+$169=144+4-2y-2y+y^2$
+$169=144+4-4y+y^2=y^2-4y+148$
+$169-169=144+4-4y+y^2=y^2-4y+148-169$
+$0=144+4-4y+y^2=y^2-4y-21$
+$0=(x+3)(x-7)$
+$\therefore x=-3$, or $x=7$
+
+21. $P_{1} = (x, x), P_{2} = (1, 4), \overline{P_1P_2} = \sqrt{5}$
+
+\textbf{\underline {Solution}:}
+$\sqrt{(1-x)^2+(4-x)^2}=\sqrt{5} \implies (\sqrt{(1-x)^2+(4-x)^2})^2=(\sqrt{5})^2 \implies \sqrt{(1-x)^2+(4-x)^2}=5$
+$\therefore\,(1-x)(1-x)+(4-x)(4-x)=5$
+$1-x-x+x^2+16-4x-4x+x^2=5$
+$1-2x+x^2+16-8x+x^2=5$
+$1-2x+2x^2+16-8x=5$
+$2x^2-10x+17=5$
+$2x^2-10x+17-5=5-5$
+$2x^2-10x+12=0$
+$\frac{1}{2}[2x^2-10x+12=0]$
+$x^2-5x+6=0$
+$(x-2)(x-3))=0$
+$\therefore\,x=2$ or $x=3$
+
+22. $P_{1} = (x, 2x), P_{2} = (2x, 1), \overline{P_1P_2} = \sqrt{2}$
+
+\textbf{\underline {Solution}:}
+$\sqrt{2}=\sqrt{(2x-x)^2+(1-2x)^2}$
+$(\sqrt{2})^2=(\sqrt{(2x-x)^2+(1-2x)^2})^2$
+$2=(2x-x)^2+(1-2x)^2$
+$2=(2x-x)(2x-x)+(1-2x)(1-2x)$
+$2=4x^2-2x^2-2x^2+x^2+1-2x-2x+4x^2$
+$2=4x^2-4x^2+x^2+1-4x+4x^2 \implies\, 2=5x^2-4x+1 \implies\, 2-2=5x^2-4x+1-2$
+$\implies\, 0=5x^2-4x-1 \implies\, 0=(5x+1)(x-1) \implies\, x=-\frac{1}{5}$ or $x=1$
+
+23. Show that $(5,2)$ is on the perpendicular bisector of the segment $\overline{AB}$ where $A = (1,3)$ and $B=(4, -2)$
+
+\textbf{\underline {Solution}:}
+
+A bisector divides in half and a perpendicular line has slope 0, therefore a perpendicular bisector is a line of slope 0 that halves the segment $\overline{AB}$.
+
+In this instance the point on the perpendicular bisector will participate in creating a triangular relationship between all three points.
+
+Therefore if we set $C=(5,2)$. Then the three points make a triangle if $\overline{AC} <\overline{AB}+\overline{BC}$
+
+$\overline{AB}=\sqrt{(4-1)^2+(-2-3)^2}=\sqrt{3^2+(-5)^2}=\sqrt{9+25}=\sqrt{34}$
+
+$\overline{BC}=\sqrt{(5-4)^2+(2-(-2))^2}=\sqrt{1^2+(2+2)^2}=\sqrt{1+16}=\sqrt{17}$
+
+$\overline{AC}=\sqrt{(5-1)^2+(2-3)^2}=\sqrt{4^2+(-1)^2}=\sqrt{16+1}=\sqrt{17}$
+
+Since $\sqrt{17} < \sqrt{34}+\sqrt{17}$, $C=(5,2)$ is proven to be on the perpendicular bisector of $\overline{AB}$. [Q.E.D.]
+
+24. Show that $(-2,4), (2,0), (2,8)$ and $(6,4)$ are the vertices of a square.
+
+25. Show that $(1,1), (4,1), (3,-2)$ and $(0,-2)$ are the vertices of a parallelogram.
+
+26. Find all possible values for $y$ so that $(5,8), (-4,11)$ and $(2,y)$ are the vertices of a right triangle.
+
+27. Determine whether each of the following points is inside, on or outside the circle with center $(-2, 3)$ and radius 5: $(1,7), (-3,8), (2,0), (-5,7), (0,-1), (-5,-1), (-6,6), (4,2)$
+
+\textbf{C}
+
+28. Find the center and radius of the circle circumscribed about the triangle with vertices $(5,1)$, $(6,0)$ and $(-1, -7)$
+
 29. Show that a triangle with vertices $(x1, y1)$, $(x2,y2)$, $(x3, y3)$ has area 
+
 \begin{align}
 \frac{1}{2}
 \begin{vmatrix}
- x_1y_2 +x_2y_3 +x_3y_1 - x_1y_3 -x_2y_1 -x_3y_2
+x_1y_2 +x_2y_3 +x_3y_1 - x_1y_3 -x_2y_1 -x_3y_2
 \end{vmatrix}
- = 
+= 
  \begin{vmatrix}
  \frac{1}{2}
  \begin{vmatrix}
  x_1 & y_1 & 1\\
  x_2 & y_2 & 1\\
- x_3 & y_3 & 1
+ x_3 & y_3 & 1\\
  \end{vmatrix}
  \end{vmatrix}
 \end{align}
-[Hint: Consider the rectangle with sides parallel to the coordinate axes and containing the vertices of the triangle.]
 
-30. Prove analytically that if the diagonals of a parallelogram are equal, then the parallelogram is a rectangle.\\
-[Hint: Place the axes as shown in fig 1.10 and show that $\overflow{AC} = \overflow{BD}$ implies that $A$ is the origin]
+{}[Hint: Consider the rectangle with sides parallel to the coordinate axes and containing the vertices of the triangle.]
+
+30. Prove analytically that if the diagonals of a parallelogram are equal, then the parallelogram is a rectangle.
+
+{}[ Hint: Place the axes as shown in fig 1.10 and show that $\overline{AC} = \overline{BD}$ implies that $A$ is the origin]
 
 31. Prove analytically that the sum of the lengths of two sides of a triangle is greater than the length of the third side.
-
-
-
-
-% \newline $\overline{AB} =\sqrt{()^2+()^2}=\sqrt{()^2+()^2}=\sqrt{}=\sqrt{}=\sqrt{}$
-% \newline $\overline{BC} =\sqrt{()^2+()^2}=\sqrt{()^2+()^2}=\sqrt{}=\sqrt{}=\sqrt{}$
-% \newline $\overline{AC} =\sqrt{()^2+()^2}=\sqrt{()^2+()^2}=\sqrt{}=\sqrt{}=\sqrt{}$
-
-
 
 \end{document}
