--- a/analytic_geometry/Section1.7_Problems.tex
+++ b/analytic_geometry/Section1.7_Problems.tex
@@ -15,20 +15,33 @@
 \textbf{Problems}
 
 \textbf{A} \textit{Plot the graphs of the equations in Problems 1-12. Indicate which give y as a function of x.}
+
 1. $y=2x-1$
+
 2. $x+2y=3$
+
 3. $3x-5y=2$
+
 4. $4x+2y=3$
+
 5. $y=x^2+1$
+
 6. $y=2x-x^2$
+
 7. $y=x^2-x-2$
+
 8. $y=x^2-4x +3$
+
 9. $x^2+y^2=1$
+
 10. $x^2+y^2=16$
+
 11. $y=x^3$
+
 12. $y=x^3-2x^2$
 
 \textit{In Problems 13-16, find the points of intersection and sketch the graphs of the equations.}
+
 13. $3x-5y=2$
 $4x+2y=1$
 
@@ -42,47 +55,82 @@ $x-4y=-12$
 $6x+6y=-1$
 
 \textbf{B} \textit{Plot the graphs of the equations in Problems 17-24. Indicate which give y as a function of x.}
+
 17. $x^2-y^2=4$
+
 18. $x^2-y^2=-4$
+
 19. $4x^2+y^2=4$
+
 20. $x^2-4y^2 =4$
+
 21. $y=\frac{x}{x+1}$
+
 22. $y=\frac{x+1}{x}$
+
 23. $y^2=x^3$
+
 24. $sqrt(x)+sqrt(y)=4$
+
+\begin{quote}
 \textit{In Problems 25-32, find the points of intersection annd sketch the graphs of the equations.}
+\end{quote}
+
 25.$x-y+2=0$
 $y=x^2$
+
 26.
 $x- 2y=-1$
 $y^2=x+ 4$
+
 27.
 $x+ y=1$
 $x^2+y^2=5$
+
 28.
 $2x+ y=1$
 $x^2+y^2=2$
+
 29.
 $y=x^2$
 $x= y^2$
+
 30.
 $y=x^2$
 $x^2+y^2=2$
+
 31.
 $x+ 2y=3$
 $x^2+y^2=4$
+
 32.
 $2x+3y=6$
 $x^2+y^2=16$
 
+\begin{quote}
 \textbf{C}
+\end{quote}
+
 33. Plot the graph of $x^2+y^2=0$
+
 34. Plot the graph of $x^2+y^2=-1$
-35. Graph $y=x$, $y=x^3$, $y=x^5$, using the same axes. What do you think the graph of $y= x^{99}$ looks like? Verify by plotting a few points with the aid of a pocket calculator. 
-36. Graph $y=x^2$, $y=x^4$, $y=x^6$, using the same axes. What do you think the graph of $y=x^{100}$ looks like? Verify by plotting a few points with the aid of a pocket calculator. 
+
+35. Graph $y=x$, $y=x^3$, $y=x^5$, using the same axes. What do you think the graph of $y= x^{99}$ looks like?
+\begin{quote}
+Verify by plotting a few points with the aid of a pocket calculator. 
+\end{quote}
+
+36. Graph $y=x^2$, $y=x^4$, $y=x^6$, using the same axes. What do you think the graph of $y=x^{100}$ looks like?
+\begin{quote}
+Verify by plotting a few points with the aid of a pocket calculator. 
+\end{quote}
+
 37. Graph $y=x$, $y=-x$, $y=|x|$, and $y=\sqrt{x^2}$, noting the similarities and differences. Recall that the definition of $|x|$ is given by
 $ |x|=< x if x >= 0, <-x if x < 0$
+\begin{quote}
 Also note that, while there are normally two square roots of a number, the symbol $\sqrt{}$ is used to represent the nonnegative square root.
+\end{quote}
+
 38. Find the points of intersection and sketch the graphs of
 a) $x^2+y^2 =4$
     $(x-2)^2+y^2=4$
@@ -90,5 +138,8 @@ a) $x^2+y^2 =4$
 b) $y=\sqrt{4-(x-2)^2}$
     $x=\sqrt{4-y^2}$
 
-Note the similarities and differences
+    \begin{quote}
+    Note the similarities and differences
+    \end{quote}
+
 \end{document}
