Add remaining sections

--- a/analytic_geometry/Section1.2_Problems.tex
+++ b/analytic_geometry/Section1.2_Problems.tex
@@ -189,58 +189,111 @@ $\overline{AC} =\sqrt{(-6-9)^2+(-7-(-2))^2}=\sqrt{(-15)^2+(-7+2)^2}=\sqrt{225+(-
 
 $\sqrt{225+25}=\sqrt{250}=\sqrt{25}\sqrt{10}=5\sqrt{10}=5\sqrt{2}\sqrt{5}$
 
+\medskip
 19. $P_{1} = (1, 5), P_{2} = (x, 2), \overline{P_1P_2} = 5$
 
+\smallskip
 \textbf{\underline {Solution}:}
-$5=\sqrt{(x-1)^2+(2-5)^2}=\sqrt{(x-1)(x-1)+(-3)^2}=\sqrt{x^2-2x+1+9}=\sqrt{x^2-2x+10}$
-$25=x^2-2x+10$
-$0=x^2-2x+10-25$
-$0=x^2-2x-15$
-$0=(x+3)(x-15)$
-$0=(x+3)$ or $0=(x-15)$
-$-3=x$ or $15=x$
+\smallskip
 
+$5=\sqrt{(x-1)^2+(2-5)^2}=\sqrt{(x-1)(x-1)+(-3)^2}=\sqrt{x^2-2x+1+9}=\sqrt{x^2-2x+10}$
+
+$25=x^2-2x+10$
+
+$0=x^2-2x+10-25$
+
+$0=x^2-2x-15$
+
+$0=(x+3)(x-15)$
+
+$0=(x+3)$ or $0=(x-15)$
+
+$\therefore -3=x$ or $15=x$
+
+\medskip
 20. $P_{1} = (-3, y), P_{2} = (9, 2), \overline{P_1P_2 }= 13$
 
+\smallskip
 \textbf{\underline {Solution}:}
+\smallskip
+
 $13=\sqrt{(9-(-3))^2+(2-y)^2} = \sqrt{(9+3)^2+(2-y)(2-y)}$
+
 $13^2=(\sqrt{(9-(-3))^2+(2-y)^2})^2) = (\sqrt{(12)^2+(2-y)(2-y)})^2$
+
 $169=144+4-2y-2y+y^2$
+
 $169=144+4-4y+y^2=y^2-4y+148$
+
 $169-169=144+4-4y+y^2=y^2-4y+148-169$
+
 $0=144+4-4y+y^2=y^2-4y-21$
+
 $0=(x+3)(x-7)$
+
 $\therefore x=-3$, or $x=7$
 
+\medskip
 21. $P_{1} = (x, x), P_{2} = (1, 4), \overline{P_1P_2} = \sqrt{5}$
 
-\textbf{\underline {Solution}:}
+\smallskip
+\textbf{\underline {Solution}:}\\
+\smallskip
+
 $\sqrt{(1-x)^2+(4-x)^2}=\sqrt{5} \implies (\sqrt{(1-x)^2+(4-x)^2})^2=(\sqrt{5})^2 \implies \sqrt{(1-x)^2+(4-x)^2}=5$
+
 $\therefore\,(1-x)(1-x)+(4-x)(4-x)=5$
+
 $1-x-x+x^2+16-4x-4x+x^2=5$
+
 $1-2x+x^2+16-8x+x^2=5$
+
 $1-2x+2x^2+16-8x=5$
+
 $2x^2-10x+17=5$
+
 $2x^2-10x+17-5=5-5$
+
 $2x^2-10x+12=0$
+
 $\frac{1}{2}[2x^2-10x+12=0]$
+
 $x^2-5x+6=0$
+
 $(x-2)(x-3))=0$
+
 $\therefore\,x=2$ or $x=3$
 
+\medskip
 22. $P_{1} = (x, 2x), P_{2} = (2x, 1), \overline{P_1P_2} = \sqrt{2}$
 
+\smallskip
 \textbf{\underline {Solution}:}
-$\sqrt{2}=\sqrt{(2x-x)^2+(1-2x)^2}$
-$(\sqrt{2})^2=(\sqrt{(2x-x)^2+(1-2x)^2})^2$
-$2=(2x-x)^2+(1-2x)^2$
-$2=(2x-x)(2x-x)+(1-2x)(1-2x)$
-$2=4x^2-2x^2-2x^2+x^2+1-2x-2x+4x^2$
-$2=4x^2-4x^2+x^2+1-4x+4x^2 \implies\, 2=5x^2-4x+1 \implies\, 2-2=5x^2-4x+1-2$
-$\implies\, 0=5x^2-4x-1 \implies\, 0=(5x+1)(x-1) \implies\, x=-\frac{1}{5}$ or $x=1$
 
+$\sqrt{2}=\sqrt{(2x-x)^2+(1-2x)^2}$
+
+$(\sqrt{2})^2=( \sqrt{(2x-x)^2+(1-2x)^2} )^2$
+
+$2=(2x-x)^2+(1-2x)^2$
+
+$2=(2x-x)(2x-x)+(1-2x)(1-2x)$
+
+$2=4x^2-2x^2-2x^2+x^2+1-2x-2x+4x^2$
+
+$2=4x^2-4x^2+x^2+1-4x+4x^2$
+
+$2=5x^2-4x+1$
+
+$2\color{green}-2\color{black}=5x^2-4x+1\color{green}-2\color{black}$
+
+$0=5x^2-4x-1$ 
+
+$0=(5x+1)(x-1) \implies\, x=-\frac{1}{5}$ or $x=1$
+
+\medskip
 23. Show that $(5,2)$ is on the perpendicular bisector of the segment $\overline{AB}$ where $A = (1,3)$ and $B=(4, -2)$
 
+\smallskip
 \textbf{\underline {Solution}:}
 
 A bisector divides in half and a perpendicular line has slope 0, therefore a perpendicular bisector is a line of slope 0 that halves the segment $\overline{AB}$.
@@ -257,19 +310,39 @@ $\overline{AC}=\sqrt{(5-1)^2+(2-3)^2}=\sqrt{4^2+(-1)^2}=\sqrt{16+1}=\sqrt{17}$
 
 Since $\sqrt{17} < \sqrt{34}+\sqrt{17}$, $C=(5,2)$ is proven to be on the perpendicular bisector of $\overline{AB}$. [Q.E.D.]
 
+\medskip
 24. Show that $(-2,4), (2,0), (2,8)$ and $(6,4)$ are the vertices of a square.
 
+\smallskip
+\textbf{\color{blue}\underline {Solution}:}
+
+\medskip
 25. Show that $(1,1), (4,1), (3,-2)$ and $(0,-2)$ are the vertices of a parallelogram.
 
+\smallskip
+\textbf{\color{blue}\underline {Solution}:}
+
+\medskip
 26. Find all possible values for $y$ so that $(5,8), (-4,11)$ and $(2,y)$ are the vertices of a right triangle.
 
+\smallskip
+\textbf{\color{blue}\underline {Solution}:}
+
+\medskip
 27. Determine whether each of the following points is inside, on or outside the circle with center $(-2, 3)$ and radius 5: $(1,7), (-3,8), (2,0), (-5,7), (0,-1), (-5,-1), (-6,6), (4,2)$
 
+\smallskip
+\textbf{\color{blue}\underline {Solution}:}
+
+\bigskip
 \textbf{C}
 
+\medskip
 28. Find the center and radius of the circle circumscribed about the triangle with vertices $(5,1)$, $(6,0)$ and $(-1, -7)$
 
-29. Show that a triangle with vertices $(x1, y1)$, $(x2,y2)$, $(x3, y3)$ has area 
+
+\medskip
+29. Show that a triangle with vertices $(x_1, y_1)$, $(x_2,y_2)$, $(x_3, y_3)$ has area 
 
 \begin{align}
 \frac{1}{2}
