--- a/analytic_geometry/Section1.3_Problems.tex
+++ b/analytic_geometry/Section1.3_Problems.tex
@@ -18,86 +18,483 @@
 \medskip
 
 \textit{In Problems 1-6, find the point $P$ such that $\overline{AP}/\overline{AB} = r$}
-
-1. $A=(3,4), B=(7,0) r=1/4$
-
-\medskip
-\textbf{\underline {Solution}:}
-
-2. $A=(4,-2), B=(-2,-5) r=2/3$
-
-3. $A=(5, -1), B=(-4,-5) r=1/5$
-
-4. $A=(2,4), B=(-5,2) r=2/5$
-
-5. $A=(-4,1), B=(3,8) r=3$
-
-6. $A=(-6,2), B=(4,4) r=5/2$
-
-\medskip
-\textit{In Problems 7-10, find the midpoint of the segment $AB$.}
 \medskip
 
+Coordinates of $P = (x,y)$ where 
+\[ x=x_1 + r(x_2 - x_1)  \]
+\[ y=y_1 + r(y_2 - y_1)  \]
+\medskip
+
+1. $A=(3,4), B=(7,0)\  r=1/4$
+
+\medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
+
+\medskip
+$x =3 + \frac{1}{4} (7-3) = 3 + \frac{1}{4} (4) = 4$
+
+\medskip
+$y = 4 + \frac{1}{4}(0-4) = 4 + \frac{1}{4}(-4) = 4 + (-1) = 4 - 1 = 3$
+
+\medskip
+$\therefore P(4,3)$
+
+\noindent\rule{15cm}{0.4pt}
+
+\medskip
+2. $A=(4,-2), B=(-2,-5)\  r=2/3$
+
+\medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
+
+\smallskip
+$x=4+\frac{2}{3}(-2-4)=4+\frac{2}{3}(-6)=4+(-4)=4-4=0$
+
+\smallskip
+$y=-2+\frac{2}{3}(-5-(-2))=2+\frac{2}{3}(-5+2)=2+\frac{2}{3}(-3)=2+2(-1)=$
+
+\smallskip
+$\therefore P(0,-4)$
+
+\noindent\rule{15cm}{0.4pt}
+
+\medskip
+3. $A=(5, -1), B=(-4,-5)\  r=1/5$
+
+\medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
+
+\smallskip
+$x=5+\frac{1}{5}(-4-5)=5+\frac{1}{5}(-9)=5-\frac{9}{5}=\frac{25}{5}-\frac{9}{5}=\frac{16}{5}$
+
+\smallskip
+$y=-1+\frac{1}{5}(-5-(-1))=-1+\frac{1}{5}(-4)=-1-\frac{4}{5}=-\frac{5}{5}-\frac{4}{5}=-\frac{9}{5}$
+
+\smallskip
+$\therefore P(\frac{16}{5},\frac{-9}{5})$
+
+\noindent\rule{15cm}{0.4pt}
+
+\medskip
+4. $A=(2,4), B=(-5,2)\  r=2/5$
+
+\medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
+
+\smallskip
+$x=2+\frac{2}{5}(-5-2)=2+\frac{2}{5}(-7)=2+2(-2)=2+\frac{-14}{5}=\frac{10}{5}-\frac{14}{5}=-\frac{4}{5}$
+
+\smallskip
+$y=4+\frac{2}{5}(2-4))=4+\frac{2}{5}(-2)=4+(-\frac{4}{5})=4-\frac{4}{5}=\frac{20}{5}-\frac{4}{5}=\frac{16}{5}$
+
+\smallskip
+$\therefore P=(-\frac{4}{5},\frac{16}{5})$
+
+\noindent\rule{15cm}{0.4pt}
+
+\medskip
+5. $A=(-4,1), B=(3,8)\  r=3$
+
+\medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
+
+\smallskip
+$x=-4+3(3-(-4))=-4+3(3+4=-4+(3 \cdot 4))=-4+21=17$
+
+\smallskip
+$y=3+3(8-1)=3+(3\cdot7)=3+21=24$
+
+\smallskip
+$\therefore \color{green}P=(17,24)$
+
+\noindent\rule{15cm}{0.4pt}
+\pagebreak
+
+6. $A=(-6,2), B=(4,4)\  r=5/2$
+
+\medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
+
+\smallskip
+$x=-6+\frac{5}{2}(4-(-6))=-6+\frac{5}{2}(4+6)=-6+\frac{5}{2}(10)=-6+(5\cdot5)=-6+25=19$
+
+\smallskip
+$y=2+\frac{5}{2}(4-2)=2+\frac{5}{2}(2)=2+5=7$
+
+\smallskip
+$\therefore P=(19,7)$
+
+\noindent\rule{15cm}{0.4pt}
+
+\medskip
+\textit{In Problems 7-10, find the midpoint of the segment $\overline{AB}$.}
+\medskip
+
+$P_{midpoint} = (x,y)$ where 
+\[ x=\frac{x_1 + x_2}{2},\  y=\frac{y_1 + y_2}{2} \]
+\medskip
+
+\noindent\rule{15cm}{0.4pt}
+
+\medskip
 7. $A=(5,-2), B=(-1,4)$
 
+\medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
+
+\smallskip
+$x=\frac{5+(-1)}{2}=\frac{-4}{2}=-2$
+
+\smallskip
+$y=\frac{4-2}{2}=\frac{2}{2}=1$
+
+\smallskip
+$\therefore P_{midpoint}=(-2,1)$
+
+\noindent\rule{15cm}{0.4pt}
+
+\medskip
 8. $A=(-3,3), B=(1,5)$
 
+\medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
+
+\smallskip
+$x=\frac{-3+1}{2}=\frac{-2}{2}=-1$
+
+\smallskip
+$y=\frac{3+5}{2}=\frac{8}{2}=4$
+
+\smallskip
+$\therefore P_{midpoint}=(-1,4)$
+
+\noindent\rule{15cm}{0.4pt}
+
+\medskip
 9. $A=(4,-1), B=(3,3)$
 
+\medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
+
+\smallskip
+$x=\frac{4+3}{2}$
+
+\smallskip
+$y=\frac{-1+3}{2}$
+
+\smallskip
+$\therefore P_{midpoint}=(,)$
+
+\noindent\rule{15cm}{0.4pt}
+
+\medskip
 10. $A=(-1,4), B=(0,2)$
 
 \medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
+
+\medskip
+$x=\frac{-1+0}{2}=\frac{-1}{2}$
+
+\medskip
+$y=\frac{4+2}{2}=\frac{6}{2}=3$
+
+\medskip
+$\therefore P_{midpoint}=(\frac{-1}{2},3)$
+
+\noindent\rule{15cm}{0.4pt}
+
+\pagebreak
 \textbf{B}
+
+\medskip
+\textit{Recall that $\frac{\overline{AP}}{\overline{AB}} = r$}
+\textit{and this implies $\overline{AP} = r\cdot\overline{AB}$}
+
+\medskip
+\textit{Furthermore }
+\[x=x_1+r(x_2-x_1)\]
+\[y=y_1+r(y_2-y_1)\]
+
 \medskip
 
-11. $If A=(3,5), P=(6,2) and AP/AB=1/3, find B$
+\medskip
+11. $If A=(3,5), P=(6,2)$ and $\overline{AP}/\overline{AB}=1/3$, find B
 
-12. $If P=(4,7), B=(2,-1) and AP/AB=2/5, find A$
+\medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
 
-13. $If P=(2,-5), B=(4,-3) and AP/AB=1/2, find A$
+\medskip
+$B=(x_1,y_1)=?$
 
-14. $If A=(3,3), P=(5,2) and AP/AB=3/5, find B$
+\medskip
+$6=3+\frac{1}{3}(x_1-3)=3+\frac{1}{3}x_1-\frac{1}{3}(3)=3-\frac{3}{3}+\frac{1}{3}x_1=3-1+\frac{1}{3}x_1$
+
+\medskip
+$6=2+\frac{1}{3}x_1\implies6-2=\frac{1}{3}x_1\implies3(6-2)=3(\frac{1}{3}x_1)\implies3\cdot4=x_1$
+
+\medskip
+$\therefore x_1=12$
+
+\medskip
+$2=5+\frac{1}{3}(y_1-5)=5+\frac{1}{3}y_1-\frac{1}{3}(5)=5\frac{5}{3}+\frac{1}{3}y_1=\frac{15}{3}-\frac{5}{3}+\frac{1}{3}y_1$
+
+\medskip
+$2=\frac{10}{3}+\frac{1}{3}y_1 \implies 2-\frac{10}{3}=\frac{1}{3}y_1 \implies \frac{6}{3}-\frac{10}{3}=\frac{1}{3}y_1 \implies -\frac{4}{3}=\frac{1}{3}y_1$
+
+\medskip
+$\therefore y_1=-4$
+
+\medskip
+So $B = (12, -4)$
+
+\noindent\rule{15cm}{0.4pt}
+
+\medskip
+12. $If P=(4,7), B=(2,-1)$ and $\overline{AP}/\overline{AB}=2/5$, find A
+
+\medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
+
+\medskip
+$A=(x_1,y_1)=?$
+
+\medskip
+$4 = 2+\frac{2}{5}(2-x_1)=2+\frac{2}{5}(2)-\frac{2}{5}x_1=2+\frac{4}{5}-\frac{2}{5}x_1=\frac{10}{5}+\frac{4}{5}-\frac{2}{5}x_1$
+
+\medskip
+$4=\frac{14}{5}-\frac{2}{5}x_1 \implies 4=\frac{14}{5}-\frac{2}{5}x_1 \implies 4-\frac{14}{5}=-\frac{2}{5}x_1 \implies -(\frac{5}{2})(\frac{20}{5}-\frac{14}{5})=x_1$
+
+\medskip
+$\therefore x_1=-(\frac{5}{2})(\frac{6}{5})=-3$
+
+\medskip
+$7=-1+\frac{2}{5}(-1-y_1)=-1-\frac{2}{5}-\frac{2}{5}y_1=-\frac{5}{5}-\frac{2}{5}-\frac{2}{5}y_1=-\frac{7}{5}-\frac{2}{5}y_1$
+
+\medskip
+$7+\frac{7}{5}=-\frac{2}{5}y_1 \implies \frac{35}{5}+\frac{7}{5}=-\frac{2}{5}y_1 \implies \frac{42}{5}=-\frac{2}{5}y_1 \implies (-\frac{5}{2})(\frac{42}{5})=y_1$
+
+\medskip
+$\therefore y_1=-21$
+
+\medskip
+So $A=(-3,-21)$
+
+\noindent\rule{15cm}{0.4pt}
+
+\medskip
+13. $If P=(2,-5), B=(4,-3)$ and $\overline{AP}/\overline{AB}=1/2$, find A
+
+\medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
+
+\medskip
+$2=4+\frac{1}{2}(4-x_1)=4+\frac{1}{2}(4)-\frac{1}{2}x_1=4+2-\frac{1}{2}x_1=6-\frac{1}{2}x_1$
+
+\medskip
+$2-6=-\frac{1}{2}x_1 \implies -4=-\frac{1}{2}x_1 \implies (-2)(-4)=x_1$
+
+\medskip
+$\therefore x_1=8$
+
+\medskip
+$-5=-3+\frac{1}{2}(-3-y_1)=-3-\frac{1}{2}(3)-\frac{1}{2}y_1=-\frac{6}{2}-\frac{3}{2}-\frac{1}{2}y_1=-\frac{9}{2}-\frac{1}{2}y_1$
+
+\medskip
+$-5+\frac{9}{2}=-\frac{1}{2}y_1 \implies -\frac{10}{2}+\frac{9}{2}=-\frac{1}{2}y_1 \implies -\frac{1}{2}=-\frac{1}{2}y_1 \implies 1=y_1$
+
+\medskip
+$\therefore y_1=1$
+
+\medskip
+So $A=(8,1)$
+
+\noindent\rule{15cm}{0.4pt}
+
+\pagebreak
+
+14. $If A=(3,3), P=(5,2)$ and $\overline{AP}/\overline{AB}=3/5$, find B
+
+\medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
+
+\medskip
+$5=3+\frac{3}{5}(x_2-3)=\frac{15}{5}+\frac{3}{5}x_2-(\frac{3}{5})(3)=\frac{15}{5}-\frac{9}{5}+\frac{3}{5}x_2=\frac{6}{5}+\frac{3}{5}x_2$
+
+\medskip
+$5-\frac{6}{5}=\frac{3}{5}x_2 \implies \frac{25}{5}-\frac{6}{5}=\frac{3}{5}x_2 \implies \frac{19}{5}=\frac{3}{5}x_2 \implies (\frac{5}{3})(\frac{19}{5})=x_2$
+
+\medskip
+$\therefore x_2=\frac{19}{3}$
+
+\medskip
+$2=3+\frac{3}{5}(y_1-3)=\frac{15}{5}+\frac{3}{5}y_1-(3)(\frac{3}{5})=\frac{15}{5}-\frac{9}{5}+\frac{3}{5}y_1=\frac{6}{5}+\frac{3}{5}y_1$
+
+\medskip
+$2=\frac{6}{5}+\frac{3}{5}y_1 \implies \frac{10}{5}=\frac{6}{5}+\frac{3}{5}y_1 \implies \frac{10}{5}-\frac{6}{5}=\frac{3}{5}y_1 \implies \frac{4}{5}=\frac{3}{5}y_1 \implies (\frac{5}{3})(\frac{4}{5})=y_1$
+
+\medskip
+$\therefore y_1=\frac{4}{3}$
+
+\medskip
+So $B=(\frac{19}{3},\frac{4}{3})$
+
+\noindent\rule{15cm}{0.4pt}
 
 \medskip
 \textit{In Problems 15-18, find the point $P$ between $A$ and $B$ such that $AB$ is divided in the given ratio.}
 \medskip
 
-15. $A=(5,-3), B=(-1,6), AP/AB=1/2$
+\medskip
+The midpoint formula is \[ x = \frac{x_1+x_2}{2} \qquad y=\frac{y_1+y_2}{2} \]
 
-16. $A=(-1,-3), B=(-8,11), AP/AB=3/4$
 
-17. $A=(2,-1), B=(4,5), AP/AB=2/3$
+\noindent\rule{15cm}{0.4pt}
 
-18. $A=(5,8), B=(2,-1), AP/AB=5/1$
+\medskip
+15. $A=(5,-3), B=(-1,6)$, $\overline{AP}/\overline{PB}=1/2$
+
+\medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
+
+\medskip
+
+
+
+\noindent\rule{15cm}{0.4pt}
+
+\medskip
+16. $A=(-1,-3), B=(-8,11)$, $\overline{AP}/\overline{PB}=3/4$
+
+\medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
+
+\noindent\rule{15cm}{0.4pt}
+
+\medskip
+17. $A=(2,-1), B=(4,5)$, $\overline{AP}/\overline{PB}=2/3$
+
+\medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
+
+\noindent\rule{15cm}{0.4pt}
+
+\medskip
+18. $A=(5,8), B=(2,-1)$, $\overline{AP}/\overline{PB}=5/1$
+
+\medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
+
+
+\noindent\rule{15cm}{0.4pt}
 
 \medskip
 \textbf{C}
 \medskip
 
+\noindent\rule{15cm}{0.4pt}
+
+\medskip
 19. If $P=(4,-1)$ is the midpoint of the segment $AB$, where $A=(2,5)$, find $B$.
 
+\medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
+
+\noindent\rule{15cm}{0.4pt}
+
+\medskip
 20. Find the center and radius of the circle circumscribed about the right triangle with vertices $(1,1)$, $(1,4)$ and $(7,4)$.
 
+\medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
+
+\noindent\rule{15cm}{0.4pt}
+
+\medskip
 21. Find the center and radius of the circle circumscribed about the triangle with vertices $(5,2)$, $(0,4)$ and $(-1, -1)$ (See Problem 26).
 
+\medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
+
+\noindent\rule{15cm}{0.4pt}
+
+\medskip
 22. Prove analytically that the diagonals of a parallelogram bisect each other.
 
+\medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
+
+\noindent\rule{15cm}{0.4pt}
+
+\medskip
 23. Find the point of intersection of the diagonals of the paralellogram with vertices $(1,1)$, $(4,1)$, $(3,-2)$ and $(0,-2)$.
 
+\medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
+
+\noindent\rule{15cm}{0.4pt}
+
+\medskip
 24. Prove analytically that the midpoint of the hypotenuse of a right triangle is equidistant from the three vertices.
 
+\medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
+
+\noindent\rule{15cm}{0.4pt}
+
+\medskip
 25. Prove analytically that the vertex and the midpoints of the three sides of an isoceles triangle are the vertices of a rhombus.
 
+\medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
+
+\noindent\rule{15cm}{0.4pt}
+
+\medskip
 26. Prove analytically that the meridians of a triangle are concurrent at a point two-thirds of the way from each vertex to the midpoint of the opposite side.
 
+\medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
+
+\noindent\rule{15cm}{0.4pt}
+
+\medskip
 27. The point $(1,4)$ is at a distance 5 from the midpoint of the segment joining $(3, -2)$ and $(x,4)$. Find $x$.
 
+\medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
+
+\noindent\rule{15cm}{0.4pt}
+
+\medskip
 28. The midpoints of the sides of a triangle are $(-1,3)$, $(1,-2)$, and $(5,-3)$. Find the vertices.
 
-29. Three vertices of a parallelogram are $(2,5)$, $(-7,1)$, and $(4,-6)$. Find the fourth vertex. [Hint: There is more than one solution. Sketch all possible parallelograms using the three given vertices.]
+\medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
 
+\noindent\rule{15cm}{0.4pt}
+
+\medskip
+29. Three vertices of a parallelogram are $(2,5)$, $(-7,1)$, and $(4,-6)$. Find the fourth vertex. [Hint: There is more than one \color{violet}solution\color{black}. Sketch all possible parallelograms using the three given vertices.]
+
+\medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
+
+\noindent\rule{15cm}{0.4pt}
+
+\medskip
 30. Show that if a triangle has vertices $(x_1,y_1)$, $(x_2,y_2)$ and $(x_3,y_3)$, then the point of intersection of its meridians is 
 \[ \left(\frac{x_1 + x_2 + x_3}{3}, \frac{y_1 + y_2 + y_3}{3}\right) \]
 
+\medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
+
+\noindent\rule{15cm}{0.4pt}
+
+\medskip
 31. Prove analytically that the sum of the squares of the four sides of a parallelogram is equal to the sum of the squares of the two diagonals.
+
+\medskip
+\fcolorbox{blue}{white} {\textbf{{\color{blue}Solution}:}}
+
 \end{document}
